--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'jacoco'
+    id 'org.sonarqube' version '5.1.0.4882'
 }
 
 group = 'org.example'
@@ -11,10 +13,81 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacoco {
+    toolVersion = "0.8.12"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+        csv.required = false
+    }
+
+    // Exclude files that don't need coverage
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    '**/config/**',
+                    '**/dto/**',
+                    '**/entity/**',
+                    '**/exception/**',
+                    '**/*Application.class'
+            ])
+        }))
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.70  // 70% overall coverage
+            }
+        }
+    }
+}
+
+// SonarQube Configuration
+sonar {
+    properties {
+        property 'sonar.projectKey', 'ProjectOpenLeaf_OpenLeaf-Scheduling-Service'  // Change per service
+        property 'sonar.projectName', 'OpenLeaf Scheduling Service'  // Change per service
+        property 'sonar.organization', 'projectopenleaf'  // Your SonarCloud org
+        property 'sonar.host.url', 'https://sonarcloud.io'
+
+        property 'sonar.sources', 'src/main/java'
+        property 'sonar.tests', 'src/test/java'
+        property 'sonar.java.binaries', 'build/classes/java/main'
+
+        property 'sonar.coverage.jacoco.xmlReportPaths', "$buildDir/reports/jacoco/test/jacocoTestReport.xml"
+
+        property 'sonar.exclusions', '**/config/**, **/dto/**, **/entity/**, **/exception/**, **/*Application.java'
+        property 'sonar.coverage.exclusions', '**/config/**, **/dto/**, **/entity/**, **/exception/**, **/*Application.java'
+    }
+}
+
+tasks.named('sonarqube') {
+    dependsOn test, jacocoTestReport
+}
+
+check.dependsOn jacocoTestCoverageVerification
+
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+    // Optional: For testing RabbitMQ
+    testImplementation 'org.springframework.amqp:spring-rabbit-test'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -27,6 +100,6 @@ dependencies {
     testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
 }
 
-test {
-    useJUnitPlatform()
-}
+//test {
+//    useJUnitPlatform()
+//}
