--- a/.github/workflows/scheduling-service-ci-cd.yml
+++ b/.github/workflows/scheduling-service-ci-cd.yml
@@ -17,6 +17,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      security-events: write
 
     steps:
       - name: Checkout code
@@ -153,7 +154,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         id: lowercase
         run: |
-          echo "image_ref=$(echo 'ghcr.io/${{ github.repository_owner }}/openleaf-scheduling-service:latest' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+          echo "image_ref=$(echo 'ghcr.io/${{ github.repository_owner }}/openleaf-schedulling-service:latest' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - name: Run Trivy vulnerability scanner
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
